tests/exact_empty/exact_empty.exp
Error ------------------------------------------------------------------------------------------------------ test.js:1:2

Cannot cast object literal to empty because object literal [1] is incompatible with empty [2]. [incompatible-cast]

   test.js:1:2
   1| ({p:0}:$Exact<empty>)
       ^^^^^ [1]

References:
   test.js:1:8
   1| ({p:0}:$Exact<empty>)
             ^^^^^^^^^^^^^ [2]



Found 1 error
